--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 }
 .amogus2{
 				background-color: #efdecd;
-				height: 570px;
+				height: 640px;
 				justify-content: center;
 				text-align: center;
 				width: 840px;
@@ -421,4 +421,37 @@ color:white;
 	  border-radius: 60px;
 	  border-radius: 60px;
 	   background-position: center center;
+}
+
+
+.circle{
+	position: absolute;
+	width: 190px;
+	height: 190px;
+	margin-left: 300px;
+	margin-top: -5px;
+	
+
+}
+.circle:before{
+	content: '';
+	position: absolute;
+	top: 1.9px;
+	left: 1.9px;
+	bottom: 1.9px;
+	right: 1.8px;
+
+	border-radius: 100px solid black;
+	border-radius: 50%;
+	box-shadow: 0 0 50px red, inset 0 0 0px red;
+
+
+}
+
+body{
+	justify-content: center;
+}
+
+.gav{
+	border-radius: 300px; width: 180px; margin-left: 305px;
 }
