--- a/dark-theme.css
+++ b/dark-theme.css
@@ -113,7 +113,7 @@ body ul li a:hover::before{
 }
 
 body .first {
-	height: 100%;
+	max-height: 500px;
 	width:100%;
 	background-image: url(logo.bmp);
 	background-size: cover;
