--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 			.amogus{
 				background-color: #efdecd;
 				height: 510px;
-				width: 840px;
+				width: 90%;
 				position: relative;
 				left: 0;
 				margin-left: 40px;
@@ -14,6 +14,8 @@
 				border-radius: 30px;
 				border: 4px solid black;
 				padding: 20px;
+				justify-content: center;
+				text-align: center;
 
 
 }
@@ -22,10 +24,10 @@
 				height: 100%;
 				justify-content: center;
 				text-align: center;
-				width: 840px;
+				width: 90%;
 				position: relative;
 				left: 0;
-				margin-left: 40px;
+				
 				margin-top: 100px;
 				border-radius: 30px;
 				border: 4px solid black;
@@ -392,33 +394,35 @@ color:white;
 .fotodiv{
 	background-color: white;
 	width: 90%;
-	position:absolute;
+	position:relative;
 	padding: 20px;
 	border-radius: 20px;
 	justify-content: center;
 	text-align: center;
-	margin-left: -4px;
+	margin-left: 4%;
 }
 
 .text2{
 	color: black;
 	font-size: 20px;
 	padding-bottom: 10px;
+	 margin: 0 auto;
 }
 .fotodiv1{
 	background-color: white;
-	width: 94%;
-	position:absolute;
+	width: 50%;
+
 	
 	border-radius: 20px;
 	justify-content: center;
 	text-align: center;
-	margin-left: -4px;
-	margin-top: 200px;
+	margin-left: 25%;
+	
 }
 .foto31{
 	justify-content: center;
-	 margin-left: 100px;
+	 margin-left: 50%;
+	  margin: 0 auto;
 	  border-radius: 60px;
 	  border-radius: 60px;
 	   background-position: center center;
@@ -426,11 +430,12 @@ color:white;
 
 
 .circle{
-	position: absolute;
+	position: relative;
 	width: 190px;
 	height: 190px;
-	margin-left: 300px;
+	margin-left: 40%;
 	margin-top: -5px;
+
 	
 
 }
@@ -454,5 +459,6 @@ body{
 }
 
 .gav{
-	border-radius: 300px; width: 180px; margin-left: 305px;
+	border-radius: 300px; width: 180px; margin-left: 42.1%;
+	 margin: 0 auto;
 }
