--- a/dark-theme.css
+++ b/dark-theme.css
@@ -1,7 +1,4 @@
-	*{
-				margin: 0;
-				padding: 0;
-			}
+
 	html{
 		background-color: #434743;
 	}
@@ -11,10 +8,22 @@
 		color: white;
 	}
 
-html .amogus2{
+body .amogus2{
 				background-color: #161a1f;
-		border: 4px solid white;
-		color: white;
+		
+				color: white;
+			height: 100%;
+				justify-content: center;
+				text-align: center;
+				width: 90%;
+				position: relative;
+				left: 0;
+				
+				margin-top: 100px;
+				border-radius: 30px;
+				border: 4px solid white;
+				padding: 20px;
+				margin-left: 40px;
 }
 
 
